--- a/mystyle.css
+++ b/mystyle.css
@@ -6,6 +6,10 @@
   font-display: swap;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
 
 
 .miow {
@@ -33,6 +37,10 @@
         flex-direction: column;
         width: 75%;
         justify-content: center;
+    }
+    .you {
+        width: 50% ;
+        font-size : 16px ;
     }
 }
 .beauty {
@@ -231,4 +239,5 @@ li:last-child {
                          'mymenu . . . mycontent '
                          'myfooter myfooter myfooter myfooter myfooter';
 }
+
 
